<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="passwordModel"
            type="ViewModels.LoginViewModels" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_login"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:text="@string/welcome"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_logos" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:text="@{passwordModel.emailData}"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlue"
                    android:textSize="18sp"></TextView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_text_input"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        app:binding="@{passwordModel.passwordUI}" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/password_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/borde_redondo"
                    android:text="@string/action_sign_in_short2"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:onClick="@{passwordModel::onClick}"></Button>
                <Button
                    android:id="@+id/email_change_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/borde_redondo"
                    android:text="@string/action_change_in"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:onClick="@{passwordModel::onClick}"></Button>
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="20dp"
                    android:text="@string/pdhn"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"></TextView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>