<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android='http://schemas.android.com/apk/res/android'
    xmlns:app='http://schemas.android.com/apk/res-auto'
    xmlns:tools='http://schemas.android.com/tools'>

    <data>

        <variable
            name="emailModel"
            type="ViewModels.LoginViewModels" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_login"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="20dp"
                        android:text="@string/welcome2"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="24sp">
                    </TextView>

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_logos">
                    </ImageView>


                    <!--<com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_text_input"
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        app:errorEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            app:binding="@{emailModel.emailUI}"
                            />
                    </com.google.android.material.textfield.TextInputLayout>-->

                    <Button
                        android:id="@+id/registro"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/borde_redondo"
                        android:text="@string/registro"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:onClick="@{emailModel::onClick}">
                    </Button>

                    <Button
                        android:id="@+id/iniciarsesion"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/borde_redondo"
                        android:text="@string/iniciarsesion"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:onClick="@{emailModel::onClick}">
                    </Button>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:paddingBottom="20dp"
                        android:text="@string/pdhn"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite">
                    </TextView>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>

</layout>