<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login">

    <TextView
        android:id="@+id/text_tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Tipo de Envío"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="1dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="268dp">

        <RadioButton
            android:id="@+id/radioPublica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:checked="true"
            android:paddingLeft="10dip"
            android:text="Público"
            android:textColor="@color/colorWhite"
            android:textSize="30dp" />

        <RadioButton
            android:id="@+id/radioPrivada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:checked="true"
            android:paddingLeft="10dip"
            android:text="Privado"
            android:textColor="@color/colorWhite"
            android:textSize="30dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="0dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Mensajes Predeterminados"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="1dp" />

    <TextView
        android:id="@+id/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/msg4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="1dp"
        android:text="@string/asalto"
        android:textAlignment="inherit"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/msg4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/msg2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="3dp"
        android:text="@string/secuestro"
        android:textAlignment="inherit"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/msg2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/msg5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="1dp"
        android:text="@string/temblor"
        android:textAlignment="inherit"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/msg5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/msg6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        android:text="@string/asalto2"
        android:textAlignment="inherit"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/msg6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="1dp"
        android:text="@string/asalto"
        android:textAlignment="inherit"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editAyuda"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="1dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Escribir Mensaje"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="1dp" />

    <EditText
        android:id="@+id/editAyuda"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_above="@+id/buttonAgregar"
        android:layout_marginBottom="3dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingTop="10dp"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/buttonAgregar"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="41dp"
        android:text="@string/Solicitar"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</RelativeLayout>